--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,29 +23,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Build
-        run: ./gradlew build --stacktrace --scan
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: jars
-          path: |
-            juliet-*/build/libs/*.jar
-            !**/*-sources.jar
-            !**/*-javadoc.jar
-
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: juliet-*/build/libs/*.jar
-
-      - name: Trigger JitPack build on release tag
-        if: startsWith(github.ref, 'refs/tags/')
-        run:
-          VERSION="${GITHUB_REF/refs\/tags\/v/}"
-          JITPACK_URL="https://jitpack.io/com/github/${{ github.repository }}/${VERSION}/maven-metadata.xml"
-          curl -s -m 30 "${JITPACK_URL}" || true
+        run: ./gradlew build
   sonar:
     needs: build-linux
     runs-on: ubuntu-latest
