--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,16 @@ jobs:
           distribution: zulu
           java-version: 11
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
       - name: Build
-        run: ./gradlew build
+        run: ./gradlew build --stacktrace --scan
+
+
   sonar:
     needs: build-linux
     runs-on: ubuntu-latest
