--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
       - name: Run Sonar Scanner
         run: ./gradlew sonarqube
         env:
@@ -53,7 +56,7 @@ jobs:
 
       - name: Build PVS-Studio image
         run: |
-          docker build -t viva64/pvs-studio:7.36 -f Dockerfile
+          docker build -t viva64/pvs-studio:7.36 . 
 
       - name: Start PVS-Studio container and analyze
         run: |
