--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,14 +37,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+      - name: Set up Docker Compose
+        run: |
+            sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+            docker-compose --version
 
       - name: Run Sonar Scanner
-        run: ./gradlew sonarqube
-        env:
-          SONAR_TOKEN: sqa_e80ed932c5d53dae5db7945b59354aaeba84dcf7
-          SONAR_HOST_URL: https://bjlzv213-9000.euw.devtunnels.ms/projects
+        run: docker-compose run --rm sonar-scanner 
+
         
   pvs:
     needs: build-linux
@@ -57,6 +58,12 @@ jobs:
       - name: Build PVS-Studio image
         run: |
           docker build -t viva64/pvs-studio:7.36 . 
+
+      - name: Set up Docker Compose
+        run: |
+            sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+            docker-compose --version
 
       - name: Start PVS-Studio container and analyze
         run: |
