--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     command: >
       sh -c "mkdir -p reports && 
       java -jar /root/.config/PVS-Studio-Java/7.36.91321/pvs-studio.jar --activate-license --user-name 'PVS-Studio Free' --license-key 'FREE-FREE-FREE-FREE' &&
-      java -jar /root/.config/PVS-Studio-Java/7.36.91321/pvs-studio.jar --src . --analysis-mode OWASP --output-type html --output-file ./reports/index.html"
+      java -jar /root/.config/PVS-Studio-Java/7.36.91321/pvs-studio.jar --src . --analysis-mode OWASP --output-type html --output-file ./reports/rep.html"
 
   sonarqube:
     image: sonarqube:latest
@@ -35,7 +35,7 @@ services:
       -Dsonar.projectKey=my-java-project
       -Dsonar.sources=.
       -Dsonar.java.binaries=.
-      -Dsonar.host.url=https://bjlzv213-9000.euw.devtunnels.ms
+      -Dsonar.host.url=http://localhost:9000/
       -Dsonar.token=sqa_e80ed932c5d53dae5db7945b59354aaeba84dcf7
 volumes:
   sonarqube_data:
